navbar break at 393px fixed

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -146,7 +146,7 @@
     }
 }
 
-@media only screen and (max-width: 389px){
+@media only screen and (max-width: 393px){
     
     .navbar {
         padding-right: 10px;
